--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,4 @@
-eload configuration
+# Reload configuration
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind S source-file ~/tmux/session1
 bind N command-prompt 'rename-session %%'
