--- a/1.7/Dockerfile
+++ b/1.7/Dockerfile
@@ -12,6 +12,17 @@ RUN yum install -y vim wget git && yum -y clean all \
     && mkdir -p "$GOPATH/src" "$GOPATH/bin" && chmod -R 777 "$GOPATH" \
     && git clone https://github.com/gmarik/Vundle.vim.git /root/.vim/bundle/Vundle.vim \
     && vim +PluginInstall +qall \
+	&& go get github.com/nsf/gocode \
+	&& go get github.com/alecthomas/gometalinter \
+	&& go get golang.org/x/tools/cmd/goimports \
+	&& go get golang.org/x/tools/cmd/guru \
+	&& go get golang.org/x/tools/cmd/gorename \
+	&& go get github.com/golang/lint/golint \
+	&& go get github.com/rogpeppe/godef \
+	&& go get github.com/kisielk/errcheck \
+	&& go get github.com/jstemmer/gotags \
+	&& mkdir -p /root/vimgobin \
+	&& mv /go/bin/* /root/vimgobin/ \
     && rm -rf /go/src/* /go/pkg/*
 
 WORKDIR $GOPATH
